<resources>
    <string name="app_name">CharacterSheet</string>
    <string name="primary_color">Primary color</string>
    <string name="button">Button</string>
    <string name="secondary_color">Secondary color</string>
    <string name="email_icon">email icon</string>
    <string name="folk">Folk</string>
    <string name="class_level">Class_Level</string>
    <string name="name">Name</string>
    <string name="health">Health</string>
    <string name="background">Background</string>
    <string name="healthText">Health</string>
    <string name="HealthNumber">10</string>
    <string name="ArmourClass">AC</string>
    <string name="ACNumber">10</string>
    <string name="str">STR</string>
    <string name="StrengthScore">10</string>
    <string name="StrengthBonusText">+0</string>
    <string name="dex">DEX</string>
    <string name="DexBonusText">+0</string>
    <string name="DexScore">10</string>
    <string name="con">CON</string>
    <string name="StrengthBonus">+0</string>
    <string name="ConScore">10</string>
    <string name="IntText">INT</string>
    <string name="ChaText">CHA</string>
    <string name="WisText">WIS</string>
    <string name="IntScore">10</string>
    <string name="WisBonus">+0</string>
    <string name="ChaScore">10</string>
    <string name="IntBonus">+0</string>
    <string name="WisScore">10</string>
    <string name="ChaBonus">+0</string>
    <string name="hit_die">Hit Die</string>
    <string name="_1d6">1d6</string>
    <string name="_1_1">1/1</string>
    <string name="rollresult">RollResult</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture">Capture</string>
    <string name="connectioncode">ConnectionCode</string>
    <string name="port">Port</string>
    <string name="servername">ServerName</string>
    <string name="resultsherevar">resultsHere</string>
    <string name="app_name1">DiceReaderExp</string>
</resources>
