<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8pt"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/CharacterName"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Class_Level"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/class_level"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toRightOf="@id/CharacterName"
        app:layout_constraintTop_toTopOf="@id/CharacterName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Folk"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/folk"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CharacterName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Background"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/background"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintLeft_toRightOf="@id/Folk"
        app:layout_constraintTop_toBottomOf="@id/Class_Level" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/StatusContainer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Folk">

        <ImageButton
            android:id="@+id/HealthButton"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/HealthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/healthText"
            app:layout_constraintLeft_toLeftOf="@id/HealthButton"
            app:layout_constraintTop_toTopOf="@id/HealthButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/HealthNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/HealthNumber"
            app:layout_constraintLeft_toLeftOf="@id/HealthText"
            app:layout_constraintTop_toBottomOf="@id/HealthText"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/ACHolder"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@id/HealthButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ACText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ArmourClass"
            app:layout_constraintLeft_toLeftOf="@id/ACHolder"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/ACNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ACNumber"
            app:layout_constraintLeft_toLeftOf="@id/ACHolder"
            app:layout_constraintBottom_toBottomOf="@id/ACHolder"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/HitDieButton"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@id/ACHolder"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/HitDieText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/hit_die"
            app:layout_constraintLeft_toLeftOf="@id/HitDieButton"
            app:layout_constraintTop_toTopOf="@id/HitDieButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/HitDieType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/_1d6"
            app:layout_constraintLeft_toLeftOf="@id/HitDieButton"
            app:layout_constraintTop_toBottomOf="@id/HitDieText"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/HitDieCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/_1_1"
            app:layout_constraintLeft_toRightOf="@id/HitDieType"
            app:layout_constraintTop_toBottomOf="@id/HitDieText"
            android:padding="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AbilityScores1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/StatusContainer">

        <ImageButton
            android:id="@+id/StrengthButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/StrengthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/str"
            app:layout_constraintLeft_toLeftOf="@id/StrengthButton"
            app:layout_constraintTop_toTopOf="@id/StrengthButton"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/StrengthScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/StrengthScore"
            app:layout_constraintLeft_toRightOf="@id/StrengthBonus"
            app:layout_constraintTop_toBottomOf="@id/StrengthText"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/StrengthBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/StrengthBonusText"
            app:layout_constraintLeft_toLeftOf="@id/StrengthButton"
            app:layout_constraintTop_toBottomOf="@id/StrengthText"
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/DexButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@id/StrengthButton"
            app:layout_constraintRight_toLeftOf="@id/ConButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/DexText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/dex"
            app:layout_constraintLeft_toLeftOf="@id/DexButton"
            app:layout_constraintTop_toTopOf="@id/DexButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/DexBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/DexBonusText"
            app:layout_constraintLeft_toLeftOf="@id/DexText"
            app:layout_constraintTop_toBottomOf="@id/DexText"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/DexScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/DexScore"
            app:layout_constraintLeft_toRightOf="@id/DexBonus"
            app:layout_constraintTop_toBottomOf="@id/DexText"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/ConButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@+id/DexButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ConText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/con"
            app:layout_constraintLeft_toLeftOf="@id/ConButton"
            app:layout_constraintTop_toTopOf="@id/ConButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/ConBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/StrengthBonus"
            app:layout_constraintLeft_toLeftOf="@id/ConText"
            app:layout_constraintTop_toBottomOf="@id/ConText"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/ConScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ConScore"
            app:layout_constraintLeft_toRightOf="@id/ConBonus"
            app:layout_constraintTop_toBottomOf="@id/ConText"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/AbilityScores2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AbilityScores1">

        <ImageButton
            android:id="@+id/IntButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/IntText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/IntText"
            app:layout_constraintLeft_toLeftOf="@id/IntButton"
            app:layout_constraintTop_toTopOf="@id/IntButton"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/IntScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/IntScore"
            app:layout_constraintLeft_toRightOf="@id/IntBonus"
            app:layout_constraintTop_toBottomOf="@id/IntText"
            android:padding="5dp"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <TextView
            android:id="@+id/IntBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/IntBonus"
            app:layout_constraintLeft_toLeftOf="@id/IntButton"
            app:layout_constraintTop_toBottomOf="@id/IntText"
            android:padding="5dp"/>

        <ImageButton
            android:id="@+id/WisButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@id/IntButton"
            app:layout_constraintRight_toLeftOf="@id/ChaButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/WisText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/WisText"
            app:layout_constraintLeft_toLeftOf="@id/WisButton"
            app:layout_constraintTop_toTopOf="@id/WisButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/WisBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/WisBonus"
            app:layout_constraintLeft_toLeftOf="@id/WisText"
            app:layout_constraintTop_toBottomOf="@id/WisText"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/WisScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/WisScore"
            app:layout_constraintLeft_toRightOf="@id/WisBonus"
            app:layout_constraintTop_toBottomOf="@id/WisText"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <ImageButton
            android:id="@+id/ChaButton"
            android:layout_width="114dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintLeft_toRightOf="@+id/WisButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ChaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ChaText"
            app:layout_constraintLeft_toLeftOf="@id/ChaButton"
            app:layout_constraintTop_toTopOf="@id/ChaButton"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/ChaBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ChaBonus"
            app:layout_constraintLeft_toLeftOf="@id/ChaText"
            app:layout_constraintTop_toBottomOf="@id/ChaText"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/ChaScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/ChaScore"
            app:layout_constraintLeft_toRightOf="@id/ChaBonus"
            app:layout_constraintTop_toBottomOf="@id/ChaText"
            android:padding="5dp"
            android:autofillHints=""
            android:inputType="numberDecimal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/RollResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="48dp"
        android:text="@string/rollresult"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@id/AbilityScores2"
        app:layout_constraintTop_toBottomOf="@id/AbilityScores2" />

</androidx.constraintlayout.widget.ConstraintLayout>