<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8pt"
        >

        <EditText
            android:id="@+id/CharacterName"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Class_Level"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="server"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintLeft_toRightOf="@id/CharacterName"
            app:layout_constraintTop_toTopOf="@id/CharacterName"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/StatusContainer"
            android:layout_width="378dp"
            android:layout_height="234dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CharacterName">

            <ImageButton
                android:id="@+id/HealthButton"
                android:layout_width="114dp"
                android:layout_marginRight="100dp"
                android:layout_height="114dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/HealthButton"
                app:layout_constraintLeft_toLeftOf="@id/HealthButton"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_minus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription=""
                    android:src="" />

                <TextView
                    android:id="@+id/threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/bottom_sheet_text_color"
                    android:textSize="25sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_plus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription=""
                    android:src=""  />
            </LinearLayout>

            <TextView
                android:id="@+id/HealthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Roll"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="@id/HealthButton"
                app:layout_constraintTop_toTopOf="@id/HealthButton" />

            <EditText
                android:id="@+id/ACNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:visibility="invisible"
                android:padding="5dp"
                android:text="@string/ACNumber"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@id/HitDieButton"
                app:layout_constraintLeft_toLeftOf="@id/HitDieButton" />

            <ImageButton
                android:id="@+id/HitDieButton"
                android:layout_width="114dp"
                android:layout_height="114dp"
                android:layout_marginLeft="50dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintLeft_toRightOf="@id/HealthButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/HitDieText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Connect"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="@id/HitDieButton"
                app:layout_constraintTop_toTopOf="@id/HitDieButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/RollResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="48dp"
            android:text="@string/rollresult"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@id/StatusContainer"
            app:layout_constraintTop_toBottomOf="@id/StatusContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
